-------------------------------------
    5.0-4
-------------------------------------

-------------------------------------
    5.0-3   2015-09-09
-------------------------------------
Fixed file browser header content type causing blank file / folder
contents
https://sourceforge.net/p/phpvirtualbox/bugs/49/

Fixed selection highlighting in file / folder browser

Fixed all VMs in a group starting on the same RDP port
https://sourceforge.net/p/phpvirtualbox/bugs/46/

Fixed missing en.xml language file
https://sourceforge.net/p/phpvirtualbox/bugs/45/

-------------------------------------
    5.0-2   2015-08-12
-------------------------------------
Translation fixes

Fixed error when creating host-only networks

Fixed host-only network DHCP server settings

Fix USB device attaching / detaching from Settings menu of a
running VM.

-------------------------------------
    5.0-1   2015-08-05
-------------------------------------
Fix paths in recovery.php-disabled

Fix Content-type header in api.php

Fix add medium button context menu in VM settings

Fix RDP link

Fix bug when changing password

Removed unused OnAdditionsStateChanged event

Change in the way Windows drive list is obtained

Fixed errors manipulating groups when $phpVboxGroups is set

-------------------------------------
    5.0-0	2015-07-18
-------------------------------------
VirtualBox 5.0 compatibility.

Progress operations are now listed in order of creation from top
top bottom.
 
-------------------------------------
	4.3-3	2015-04-04
-------------------------------------
Added 2d/3d video acceleration configuration options in VM
settings

Fixed guest OS icon for Linux 2.6 (32-bit)

Added $eventListenerTimeout configuration option.

Upgraded jQuery to 1.11.2 and jQuery-ui to 1.11.4

-------------------------------------
	4.3-2	2014-12-16
-------------------------------------

Updated documentation to remove all googlecode.com references.
